# argoverse_ros

./: CMakeLists.txt  README.md  package.xml  requirements.txt
.github/workflows/: build.yml
cfg/: argoverse.rviz
launch/: create_rosbag.launch  lexus.launch  play_rosbag.launch  rviz.launch
scripts/: convert.sh  create_rosbag.py  create_rosbag.sh  create_rosbag_images.py  import_cv2.py  utils.py
urdf/: lexus.urdf
